# WA_Tool

./: .env.example  .gitignore  AI_AGENT_GUIDE.md  CHANGELOG.md  COMPLETE_SYSTEM_DOCUMENTATION.md  COMPREHENSIVE_SYSTEM_ANALYSIS.md  CORRECTED_RESUBMISSION_PROCESS.md  CURRENT_IMPLEMENTATION_ANALYSIS.md  DOCKER_COMPOSE_ARCHITECTURE_PLAN.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_HEALTH_CHECK_FIXES.md  DOCKER_HEALTH_QUICK_REFERENCE.md  ENHANCED_QA_IMPLEMENTATION_SUMMARY.md  GOOGLE_SHEETS_DUAL_WRITE_IMPLEMENTATION.md  GOOGLE_SHEETS_QUICK_REFERENCE.md  MODULE_IDENTITY.md  PRIVACY_FILTER_DEPLOYMENT.md  PRIVACY_IMPLEMENTATION_PLAN.md  PROJECT_API_ENDPOINTS.md  QA_FEEDBACK_SYSTEM_GUIDE.md  README.md  RESUBMISSION_WORKFLOW_GUIDE.md  WARP.md  check_subbies_messages.py  check_subbies_photos.py  contacts.json  docker-compose.yml  download_subbies_images_mcp.py  download_whatsapp_images.py  extract_daily_update.py  how_to_run_whatsapp_mcp.md  kill_switch.py  mail_error_screenshot.html  marius_tech_stack_summary.html  migrate_project_names.py  migrate_to_airtable.py  migrate_to_google_sheets.py  migrate_to_neon.py  plan.md  plan.txt  (+19 more)
whatsapp-mcp/whatsapp-mcp-server/: DROP_EXTRACTION_GUIDE.md  Dockerfile  KILL_SWITCH_IMPLEMENTATION.md  NEON_SYNC_GUIDE.md  QA_INTEGRATION_STATUS.md  QUICK_COMMANDS.md  README_STREAMLIT.md  REALTIME_MONITORING_GUIDE.md  SERVICE_ARCHITECTURE_GUIDE.md  SPAM_PREVENTION_PLAN_2025-10-01.md  Streamlit_Monitor_App.py  TOMORROW_IMPLEMENTATION_CHECKLIST.md  add_mohadin_jid.sh  check_mohadin_detected.py  deploy_robust_monitor.sh  enhanced_qa_feedback.py  extract_drops.py  (+38 more)
(+41 files in other folders)
