[project]
name = "whatsapp-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.183.0",
    "google-auth>=2.41.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
]
